Fix youtube video on mobile

--- a/wp-content/themes/fount-child/assets/css/frm.css
+++ b/wp-content/themes/fount-child/assets/css/frm.css
@@ -143,6 +143,9 @@ p.special-pricing span.yellow-circle {
 	.hero.hero-slide .row_pattern_overlay {
 		display: none;
 	}
+	.video-hero-embed iframe, .video-container object, .video-container embed {
+		z-index: 10;
+	}
 }
 
 .video-background {
@@ -178,7 +181,6 @@ p.special-pricing span.yellow-circle {
 	left:0;
 	width:100%;
 	height:100%;
-	z-index: 10;
 }
 
 .hero-slide {
